--- a/app/templates/browse_regions.html
+++ b/app/templates/browse_regions.html
@@ -14,7 +14,7 @@
   			<tr>
   				<th class="col-sm-4 text-center"><h4><b>Region</b></h4></th>
   				<th class="col-sm-4 text-center"><h4><b>Population</b></h4></th>
-  				<th class="col-sm-4 text-center"><h4><b>Tournament Count</b></h4></th>
+  				<th class="col-sm-4 text-center"><h4><b>Tourney Count</b></h4></th>
   			</tr>
   		</thead>
 
