--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -5,16 +5,16 @@
 <div class="container">
 	<div class="panel panel-default">
 	<div class="panel-heading">
-		<h2><b> Browse Tournaments </b></h2>
+		<h2><b>Browse Tournaments</b></h2>
 	</div>
 
 	<div class="panel-body">
 		<table class="table bootstrap-datatable table-hover">
 			<thead>
 				<tr>
-					<th class="text-center"><h4><b>Date</h4></b></th>
-					<th class="text-center"><h4><b>Tournament</b></h4></th>
-					<th class="text-center"><h4><b>Entrants</b></h4></th>
+					<th class="text-center "><h4><b>Date</h4></b></th>
+					<th class="text-center"><h4><b>Name</b></h4></th>
+					<th class="text-center"><h4><b>Size</b></h4></th>
 					<th class="text-center"><h4><b>Region</b></h4></th>
 				</tr>
 			</thead>
