--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -1,10 +1,11 @@
 <!-- prints User representation in HTML given a User object, with route hyperlink to /user (profile), /region, /character. Used primarily in /browse_users -->
 
 <tr>
-    <td class="col-sm-3 text-center horizontal-overflow">
+    <td class="col-sm-3 text-center mobile-horizontal-overflow-td-col-3 horizontal-overflow">
         <a href="{{url_for("user", tag=user.tag)}}"><b>{{user.tag}}</b></a>
     </td>
-    <td class="col-sm-3 text-center">
+    
+    <td class="col-sm-3 text-center mobile-horizontal-overflow-td-col-3">
         {% if user.region %}
     	   <a href="{{url_for("region", region=user.region)}}"><b>{{user.region}}</b></a>
     	{% else %}
@@ -12,7 +13,7 @@
 	    {% endif %}
     </td>
 
-    <td class="col-sm-3 text-center">
+    <td class="col-sm-3 text-center mobile-horizontal-overflow-td-col-3">
     	{% if user.main %}
             <a href="{{url_for("character", character=user.main)}}"><b>{{user.main}}</b></a>
             {% set character_name = user.main %}
@@ -22,7 +23,7 @@
         {% endif %}
     </td>
 
-    <td class="col-sm-3 text-center">
+    <td class="col-sm-3 text-center mobile-horizontal-overflow-td-col-3">
         {% if user.trueskill.mu %}
             {{user.trueskill.mu|round(4, 'common')}}
         {% endif %}
