--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -11,12 +11,7 @@
 	<div class="panel-body">
 		<table class="table bootstrap-datatable table-hover">
 			<thead>
-				<tr>
-					<th class="text-center "><h4><b>Date</h4></b></th>
-					<th class="text-center"><h4><b>Name</b></h4></th>
-					<th class="text-center"><h4><b>Size</b></h4></th>
-					<th class="text-center"><h4><b>Region</b></h4></th>
-				</tr>
+				{% include 'tournament_display_head.html' %}
 			</thead>
 
 			<tbody>
