--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -9,13 +9,7 @@
   <div class="panel-body">
 	<table class="table bootstrap-datatable table-hover">
 	  <thead>
-	    <tr>
-        <th class="text-center"><h4><b>User</b></h4></th>
-	      <th class="text-center"><h4><b>Region</b></h4></th>
-	      <th class="text-center"><h4><b>Main</b></h4></th>
-	      <th class="text-center"><h4><b>Rating</b><h4></th>
-	      <!-- <th><h4><b>Secondaries</b></h4></th> -->
-	    </tr>
+	  	{% include 'user_display_head.html' %}
 	  </thead>
 	  
 	  <tbody>
