--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,7 +1,16 @@
-<!-- extend base layout -->
+<!-- Template for 404 error in production run -->
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>File Not Found</h1>
-  <p><a href="{{ url_for('home') }}">Back</a></p>
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h1>File Not Found</h1>
+	  	</div>
+
+	  	<div class="panel-body">
+	  		<p><a href="{{ url_for('home') }}">Back</a></p>
+	  	</div>
+	  </div>
+	</div>
 {% endblock %}
