--- a/app/templates/char_icon.html
+++ b/app/templates/char_icon.html
@@ -1,7 +1,7 @@
 <!-- Display character icon (.png image) -->
 <!-- needs variable character_name = string representing Character -->
 {% if character_name %}
-	{% set char_image_url_raw = ["/static/char_icons/", character_name, ".png"] %}
-	{% set char_image_url = char_image_url_raw|join %}
-	<img src="{{char_image_url}}", alt={{character_name}}>
+	<a href="{{url_for('character', character=character_name)}}">
+		<img src="{{url_for('static', filename='char_icons/' + character_name + '.png')}}", alt={{character_name}}>
+	</a>
 {% endif %}
