--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -107,9 +107,9 @@
             </form>
           </li>
           <li>
-            <form action="" method="get" name="RegionSelect">
+            <form action="{{url_for('select_region')}}" method="post" name="RegionSelect">
               {{g.region_form.hidden_tag()}}
-              {{g.region_form.region_name(class="form-control")}}
+              {{g.region_form.region_name(class="form-control", onchange="this.form.submit()")}}
             </form>
           </li>
         </ul>
