routes and functions filter by g.region upon querying for characters, tournaments, and users, and templating has updated to reflect that

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <header class="jumbotron">
-    <h1>About Smashstats</h1>
+    <h1>About SmashStats</h1>
 
     <p>The application recognizes and sorts players by tag and associates them with the sets and tournaments they have played in. Top players are remembered and all references to them are matched to their tag, without sponsor or team information. Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, no player information is automatically entered besides their tag and their set history; this information includes region, main, and secondary characters. </p>
 
@@ -13,8 +13,8 @@
 
     <p>Features planned for future releases
     <ul>
-        <li> Support for more regions </li>
-        <li> Tournament data from Liquipedia, SmashGG, as well as match data </li>
+      <li> Support for more regions </li>
+      <li> Tournament data from Liquipedia, SmashGG, as well as match data </li>
     </ul>
     </p>
 
