--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="jumbotron">
     <h1>
-      {{character}}
+      {{character}} ({{g.region}})
       {% set character_name = character %}
       {% include 'char_icon.html' %}
     </h1>
