--- a/app/templates/browse_characters.html
+++ b/app/templates/browse_characters.html
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-	  		<h2><b>Browse {{current_region}}'s Characters</b></h2>
+	  		<h2><b>Browse {{current_region}} Characters</b></h2>
 			</div>
 
 		<div class="panel-body">
