--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -5,7 +5,7 @@
 <div class="container">
 	<div class="panel panel-default">
 	<div class="panel-heading">
-		<h2><b>Browse {{current_region}}'s Tournaments</b></h2>
+		<h2><b>Browse {{current_region}} Tournaments</b></h2>
 	</div>
 
 	<div class="panel-body">
