--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,49 +4,60 @@
 <div class="container">
   <header class="jumbotron">
     <h1><a href="{{url_for("user", tag=user.tag)}}">{{user.tag}}</a></h1>
+    <table class="table borderless">
+      <tr>
+        <td class="col-sm-6">
+          <h3>
+            {% if user.region %}
+              <b>Region: </b><a href="{{url_for("region", region=user.region)}}">{{user.region}}</a>
+            {% else %}
+              <b>Region: </b> None
+            {% endif %}
+          </h3>
+        </td>
 
-    <h3>
-      {% if user.trueskill %}
-        <!-- Round float value to 4 decimal places -->
-        <b>Rating:</b> {{user.trueskill.mu|round(4, 'common')}}
-      {% endif %}
-    </h3>
+        <td class="col-sm-6">
+          <h3><b>Main:</b>
+            {% if user.main %}
+              <a href="{{url_for("character", character=user.main)}}">{{user.main}}</a>
+              {% set character_name = user.main %}
+              {% include "char_icon.html" %}
+            {% else %}
+              Unchosen
+            {% endif %}
+          </h3>
+        </td>
+      <tr>
 
-    <h3>
-      {% if user.region %}
-        <b>Region:</b> <a href="{{url_for("region", region=user.region)}}">{{user.region}}</a>
-      {% else %}
-        <b>Region:</b> None
-      {% endif %}
-    </h3>
+      <tr>
+        <td class="col-sm-6">
+          <h3>
+            {% if user.trueskill %}
+              <!-- Round float value to 4 decimal places -->
+              <b>Rating:</b> {{user.trueskill.mu|round(4, 'common')}}
+            {% endif %}
+          </h3>
 
-    <h3><b>Main:</b>
-      {% if user.main %}
-        <a href="{{url_for("character", character=user.main)}}">{{user.main}}</a>
-        {% set character_name = user.main %}
-        {% include "char_icon.html" %}
-      {% else %}
-        Unchosen
-      {% endif %}
-    </h3>
+        <td class="col-sm-6">
+          <h3>
+            <b>Secondaries:</b>
+            {% if user.secondaries.all() %}
+              {% for character in user.secondaries.all() %}
+                <a href="{{url_for("character", character=character)}}">{{character}}</a>
 
-    <h3>
-      <b>Secondaries:</b>
-      {% if user.secondaries.all() %}
-        {% for character in user.secondaries.all() %}
-          <a href="{{url_for("character", character=character)}}">{{character}}</a>
-
-          <!-- routed to from Character pages, character = string representing Character -->
-          {% set char_image_url_raw = ["/static/char_icons/", character, ".png"] %}
-          {% set char_image_url = char_image_url_raw|join %}
-          <img src="{{char_image_url}}", alt={{character}}>
-        {% endfor %}
-      {% else %}
-        None
-      {% endif %}
-    </h3>
-
-    <!-- Route to edit User; Not used in version 1.0 -->
+                <!-- routed to from Character pages, character = string representing Character -->
+                {% set char_image_url_raw = ["/static/char_icons/", character, ".png"] %}
+                {% set char_image_url = char_image_url_raw|join %}
+                <img src="{{char_image_url}}", alt={{character}}>
+              {% endfor %}
+            {% else %}
+              None
+            {% endif %}
+          </h3>
+        </td>
+      </tr>
+    </table>
+    <!-- Route to edit User; Not available in version 2.0 -->
   </header>
 
   <!-- Table for displaying User's Tournament History -->
