swapped random and unknown char_icons to better represent unknown main. /head_to_head and /search now pass value of g.region to check_and_sanitize when matching form data

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -23,7 +23,8 @@
               {% set character_name = user.main %}
               {% include "char_icon.html" %}
             {% else %}
-              Unchosen
+              {% set character_name = "Unknown" %}
+              {% include "char_icon.html" %}
             {% endif %}
           </h3>
         </td>
