--- a/app/templates/user_display.html
+++ b/app/templates/user_display.html
@@ -18,7 +18,8 @@
             {% set character_name = user.main %}
             {% include 'char_icon.html'%}
         {% else %}
-            Unknown
+            {% set character_name = "Unknown" %}
+            {% include 'char_icon.html' %}
         {% endif %}
     </td>
 
