changed most table displays to table-striped, Set display rows are colored in /user by set outcome. /head_to_head rows colored by outcome of comparison, assuming user of interest is the first user

--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -9,7 +9,7 @@
 	</div>
 
 	<div class="panel-body">
-		<table class="table bootstrap-datatable table-hover">
+		<table class="table bootstrap-datatable table-striped table-hover">
 			<thead>
 				{% include 'tournament_display_head.html' %}
 			</thead>
