--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -53,7 +53,7 @@
     <h1><b> Placements </b></h1>
   </div>
   <div class="panel-body">
-  <table class="table bootstrap-datatable table-condensed table-hover">
+  <table class="table bootstrap-datatable table-striped table-condensed table-hover">
     <thead>
       <tr>
         <th></th>
@@ -89,7 +89,7 @@
   <div class="panel-body">
 
   <!-- "Table" Column Titles -->
-  <table class="table bootstrap-datatable table-condensed table-hover">
+  <table class="table bootstrap-datatable table-condensed table-striped table-hover">
     <!-- Empty header (generates navy-colored divider) -->
     <thead>
       <tr>
