--- a/app/templates/browse_characters.html
+++ b/app/templates/browse_characters.html
@@ -8,7 +8,7 @@
 			</div>
 
 		<div class="panel-body">
-			<table class="table bootstrap-datatable table-hover">
+			<table class="table bootstrap-datatable table-striped table-hover">
 				<thead>
 					<tr>
 						<th></th>
