--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -7,7 +7,7 @@
   	<h2><b>Browse {{current_region}} Users</b></h2>
   </div>
   <div class="panel-body">
-	<table class="table bootstrap-datatable table-hover">
+	<table class="table bootstrap-datatable table-striped table-hover">
 	  <thead>
 	  	{% include 'user_display_head.html' %}
 	  </thead>
