--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="panel-body">
-      <table class="table bootstrap-datatable table-hover">
+      <table class="table bootstrap-datatable table-striped table-hover">
         <thead>
           {% include 'user_display_head.html' %}
         </thead>
