--- a/app/templates/head_to_head.html
+++ b/app/templates/head_to_head.html
@@ -71,22 +71,27 @@
       <tbody>
         <tr>
           <!-- Bold text for User with the winning record -->
-          <td class="col-sm-3 text-center">
-            {% if user1_set_win_count >= user2_set_win_count %}
+          {% if user1_set_win_count > user2_set_win_count %}
+            <td class="col-sm-3 text-center success">
               <b>{{tag1}}</b> [{{user1_set_win_count}}-{{user2_set_win_count}}] {{tag2}}
-            {% elif user1_set_win_count == user2_set_win_count %}
+          {% elif user1_set_win_count == user2_set_win_count %}
+            <td class="col-sm-3 text-center warning">
               <b>{{tag1}}</b> [{{user1_set_win_count}}-{{user2_set_win_count}}] <b>{{tag2}}</b>
-            {% else %}
+          {% else %}
+            <td class="col-sm-3 text-center danger">
               {{tag1}} [{{user1_set_win_count}}-{{user2_set_win_count}}] <b>{{tag2}}</b>
-            {% endif %}
+          {% endif %}
           </td>
           
-          <td class="col-sm-3 text-center">
-            {% if user1_match_win_count + user1_score_matches_won >= user2_match_win_count + user2_score_matches_won %}
+
+          {% if user1_match_win_count + user1_score_matches_won > user2_match_win_count + user2_score_matches_won %}
+            <td class="col-sm-3 text-center success">
               <b>{{tag1}}</b> [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] {{tag2}}
-            {% elif user1_match_win_count + user1_score_matches_won == user2_match_win_count + user2_score_matches_won %}
+          {% elif user1_match_win_count + user1_score_matches_won == user2_match_win_count + user2_score_matches_won %}
+            <td class="col-sm-3 text-center warning">
               <b>{{tag1}}</b> [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] <b>{{tag2}}</b>
-            {% else %}
+          {% else %}
+            <td class="col-sm-3 text-center danger">
               {{tag1}} [{{user1_match_win_count + user1_score_matches_won}}-{{user2_match_win_count + user2_score_matches_won}}] <b>{{tag2}}</b>
             {% endif %}
           </td>
@@ -132,7 +137,7 @@
       <h2><b> Tournament History </b></h2>
     </div>
     <div class="panel-body">
-    <table class="table bootstrap-datatable table-condensed table-hover">
+    <table class="table bootstrap-datatable table-condensed table-striped table-hover">
       <thead>
         <tr>
           <th></th>
@@ -144,19 +149,23 @@
       <tbody>
         {% for tournament in mutual_tournaments %}
           <!-- Bold text for User with the winning record. Each item in dict mutual_tournaments looks like [(u'BAM 7', (('2nd', 2), ('1st', 1)))], where first item is tournament name and  second and third items are placement and placement number for user1 and user2 respectively. -->
-          <tr>
-            {% if mutual_tournaments[tournament][0][1] <= mutual_tournaments[tournament][1][1] %}
+          {% if mutual_tournaments[tournament][0][1] < mutual_tournaments[tournament][1][1] %}
+            <tr class="success">
               <td class="col-sm-4 text-right"><b><a href="{{ url_for("user", tag=tag1) }}">{{ tag1 }}</a> - {{ mutual_tournaments[tournament][0][0] }}</td></b>
-            {% else %}
+          {% elif mutual_tournaments[tournament][0][1] == mutual_tournaments[tournament][1][1] %}
+            <tr class="warning">
+              <td class="col-sm-4 text-right"><b><a href="{{ url_for("user", tag=tag1) }}">{{ tag1 }}</a> - {{ mutual_tournaments[tournament][0][0] }}</td></b>
+          {% else %}
+            <tr class="danger">
               <td class="col-sm-4 text-right"><a href="{{ url_for("user", tag=tag1) }}">{{ tag1 }}</a> - {{ mutual_tournaments[tournament][0][0] }}</td>
-            {% endif %}
+          {% endif %}
 
             <td class="col-sm-4 text-center"><b><a href="{{ url_for("tournament", tournament_name=tournament) }}">{{ tournament }}</b></td>
 
           {% if mutual_tournaments[tournament][0][1] >= mutual_tournaments[tournament][1][1] %}
-            <td class="col-sm-4 text-left"><b><a href="{{ url_for("user", tag=tag2) }}">{{ mutual_tournaments[tournament][1][0] }} - {{ tag2 }}</b></a></td>
+            <td class="col-sm-4 text-left"><b><a href="{{ url_for("user", tag=tag2) }}">{{ mutual_tournaments[tournament][1][0] }} - {{ tag2 }}</b></a></td></tr>
           {% else %}
-            <td class="col-sm-4 text-left"><a href="{{ url_for("user", tag=tag2) }}">{{ mutual_tournaments[tournament][1][0] }} - {{ tag2 }}</a></td>
+            <td class="col-sm-4 text-left"><a href="{{ url_for("user", tag=tag2) }}">{{ mutual_tournaments[tournament][1][0] }} - {{ tag2 }}</a></td></tr>
           {% endif %}
           </tr>
         {% endfor %}
@@ -170,7 +179,7 @@
       <h2><b> Set History </b></h2>
     </div>
     <div class="panel-body">
-    <table class="table bootstrap-datatable table-condensed table-hover">
+    <table class="table bootstrap-datatable table-condensed table-striped table-hover">
       <thead>
         <tr>
           <h4 class="col-sm-12 text-center">Total Sets Played: <b>{{user1_set_win_count + user2_set_win_count}} |
