--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -6,10 +6,10 @@
 	<div class="container">
 		<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3><b>User results for "{{ query }}"</b></h3>
+			<h3><b>User results for "{{query}}"</b></h3>
 		</div>
 		<div class="panel-body">
-			<table class="table bootstrap-datatable table-hover">
+			<table class="table bootstrap-datatable table-striped table-hover">
 				<thead>
 					{% include 'user_display_head.html' %}
 			  </thead>
@@ -29,7 +29,7 @@
 		<h3><b> Tournaments named "{{query}}" </b></h3>
 	</div>
 	<div class="panel-body">
-		<table class="table bootstrap-datatable table-hover">
+		<table class="table bootstrap-datatable table-striped table-hover">
 			<thead>
 				{% include 'tournament_display_head.html' %}
 			</thead>
