--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -45,11 +45,8 @@
             {% if user.secondaries.all() %}
               {% for character in user.secondaries.all() %}
                 <a href="{{url_for("character", character=character)}}">{{character}}</a>
-
-                <!-- routed to from Character pages, character = string representing Character -->
-                {% set char_image_url_raw = ["/static/char_icons/", character, ".png"] %}
-                {% set char_image_url = char_image_url_raw|join %}
-                <img src="{{char_image_url}}", alt={{character}}>
+                {% set character_name = character %}
+                {% include "char_icon.html" %}
               {% endfor %}
             {% else %}
               None
@@ -67,7 +64,7 @@
     <h2><b> {{user.tag}}'s Tournament History </b></h2>
   </div>
   <div class="panel-body">
-    <table class="table bootstrap-datatable table-condensed table-hover">
+    <table class="table bootstrap-datatable table-condensed table-striped table-hover">
       <!-- Empty header (generates navy-colored divider) -->
       <thead>
         <tr>
@@ -99,7 +96,7 @@
     <h2><b>{{user.tag}}'s Set History</b></h2>
   </div>
   <div class="panel-body">
-    <table class="table bootstrap-datatable table-hover">
+    <table class="table bootstrap-datatable table-striped table-hover">
       <b><h4 class="text-center">Total Sets: {{user_set_wins + user_set_losses}} | Overall Record: [{{user_set_wins}}-{{user_set_losses}}]</b></h4>
       <thead>
         <tr>
