regex expressions try to (buggy) match tag given tag name Alternate Tag (Tag), template optimizations

--- a/app/templates/region.html
+++ b/app/templates/region.html
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="jumbotron">
 		<h1>{{region}}</h1>
-		<h2><b>Population:</b> {{current_region.users|length}}</h2><a href="{{url_for('browse_users')}}"><b>(view region's users)</b></a>
+		<h2><b>Population:</b> {{current_region.users|length}}</h2><a href="{{url_for('browse_users')}}"><b>(view region's players)</b></a>
 		<h2><b>Tournament Count:</b> {{current_region.tournaments|length}}</h2><a href="{{url_for('browse_tournaments')}}"><b>(view region's tournaments)</b></a>
 	</div>
 
