--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -41,7 +41,7 @@
 	</td>
 
 	<td class="col-md-2 text-right mobile-horizontal-overflow-set horizontal-overflow">
-  	<a href="{{url_for("head_to_head", tag1=set.winner_tag, tag2=set.loser_tag)}}">Head to Head</a>
+  	<a href="{{url_for("head_to_head", tag1=set.winner_tag, tag2=set.loser_tag)}}"><b>Head to Head</b></a>
 	</td>
 </b></h5></tr> 
   <!-- store set.total_matches into variable for use in other templates -->
