--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -18,7 +18,7 @@
     </ul>
     </p>
 
-    <p class="text-center"> Support us! Donations help keep our server running.</p>
+    <p class="text-center">Support us! Donations help keep our server running.</p>
     <!-- PayPal Donate Button -->
     <form class="text-center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
@@ -37,33 +37,49 @@
     <div class="panel-body">
       <ul>
         <li>
-          <h4>How are rankings calculated?</h4>
-          Trueskill mothafucka. do you know it
+          <h4>Where are you getting all this information?</h4>
+          The app scrapes Challonge brackets and stores information in a database, a completely automated process.
+          <ul>
+            <li><h4>What types of tournament bracket programs do you support?</h4>
+              Currently, just Challonge, but progress is being made on parsing Liquipedia for detailed match info.
+            </li>
+          </ul>
         </li>
 
         <li>
-          <h4>How can I get my region here?</h4>
-          If you are a prominent TO in your area, get in contact with us. If you aren't get someone to do so. Tweet if you want tourney. jk dont tweet us
+          <h4>How are ratings calculated?</h4>
+          Trueskill.
+
+          <ul>
+            <li><h4>How many sets per player are taken into rating?</h4>
+            At the moment, all of them. This is subject to change in the future, to the last (most recent) x sets.
+            </li>
+          </ul>
         </li>
 
         <li>
-          <h4>Why don't you display sponsor or team tags?</h4>
-          It helps for the program to consistently recognize and identify players whose tags in bracket may differ from tournament to tournament. It also reduces the need for maintenance whenever a player changes team or sponsor.
-        </li>
-
-        <li>
-          <h4>How do you handle players who enter multiple tournaments with different tags?</h4>
+          <h4>How do you account for players who may use alternate tags in different tournaments?</h4>
           The application automatically can detect different spellings and different team/sponsor information for players. If a player uses completely different tags between tournaments, the application can remember alternate names, but that number will be limited to prevent abuse of the system. Players can also be merged after a tournament is processed.
-        </li>
+          <ul>
+            <li>
+              <h4>Why don't you display sponsor or team tags?</h4>
+              It helps for the program to consistently recognize and identify players whose tags in bracket may differ from tournament to tournament. It also reduces the need for maintenance whenever a player changes team or sponsor.
+            </li>
 
-        <li>
-          <h4>How do you deal with people from different regions having the same tag?</h4>
-          In these instances, their tag will be prefaced by their region's name, as if it were a sponsor. For example, Norcal | PewPewU
+            <li>
+              <h4>How do you deal with people from different regions having the same tag?</h4>
+              In these instances, their tag will be prefaced by their region's name, as if it were a sponsor. For example, Norcal | PewPewU. As for players in the same region having the same tag, that is probably an issue that should be addressed outside of this app.
+            </li>
+          </ul>
         </li>
 
         <li>
           <h4>What do the characters Unknown, Random, and Multiple mean?</h4>
           Unknown is a placeholder if we don't have any character information about a Player. Random means that a player randomly selects characters when he/she plays. Multiple means that a player mains multiple characters.
+          <ul>
+            <li><h4>Why can't a player have multiple mains?</h4></li>
+            This is a result of a design decision that maps one main for each player. For true multiple-main players, they can elect to choose a main character "Multiple", and list their main characters under secondaries.
+          </ul>
         </li>
 
         <li>
@@ -72,7 +88,7 @@
         </li>
 
         <li>
-          <h4>Why am I ranked so low</h4>
+          <h4>Why am I ranked so low?</h4>
           git gud kid
         </li>
 
@@ -81,8 +97,13 @@
           Tonic, a Marth main studying in New England, and Wyne, a Falco player from SoCal.
         </li>
 
-        <li><h4>Why can't a player have multiple mains?</h4></li>
         <li><h4>How can I help? (user reporting)</h4></li>
+
+        <li>
+          <h4>How can I get my region here?</h4>
+          If you are a prominent TO in your area, get in contact with us. If you aren't get someone to do so. Tweet if you want tourney. jk dont tweet us
+        </li>
+
       </ul>
     </div>
   </div>
