--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -121,11 +121,10 @@
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       <br>
-      <ul>
       {% for message in messages %}
-        <li class="flash">{{message}} </li>
+        <div class="flash">{{message}} </div>
       {% endfor %}
-      </ul>
+      <br>
     {% endif %}
   {% endwith %}
 
