--- a/app/templates/user_display_head.html
+++ b/app/templates/user_display_head.html
@@ -6,7 +6,9 @@
 	{% if form %}
 		<form class="navbar-form" action="{{url_for('browse_users')}}" name="CharacterFilter">
 	    <h4><b>{{form.character_name(class="form-control", onchange="this.form.submit()")}}</b></h4>
-     </form>
+    </form>
+  {% else %}
+  	<h4><b>Main<b></h4>
 	{% endif %}
 	</th>
 	<th class="text-center"><h4><b>Rating</b><h4></th>
